# poc-llm-asistant

./: Pasted--home-runner-ChatbotDarkAI-app-py-43-LegacyAPIWarning-The-Query-get-method-is-considered-legacy--1727302228974.txt  app.py  chatbot.py  models.py  pasted_text_1726601588450.txt  pasted_text_1726602433346.txt  pasted_text_1726603040655.txt  pyproject.toml  replit.nix
migrations/versions/: 446501d81cb7_add_feedback_column_to_chatmessage.py
static/css/: style.css
static/js/: main.js
templates/: index.html  login.html  register.html
