[tool.poetry]
name = "repl-nix-chatbotdarkai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
transformers = "^4.44.2"
torch = "^2.4.1"
flask-uploads = "^0.2.1"
psycopg2-binary = "^2.9.9"
openai = ">=1.0.0"
flask-login = "^0.6.3"
flask-session = "^0.8.0"
flask-socketio = "^5.3.7"
eventlet = "^0.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
